[gd_scene load_steps=27 format=3 uid="uid://c7csofag283fp"]

[ext_resource type="Texture2D" uid="uid://cqhft3vp8yb0n" path="res://beekeepers/beekeeper.aseprite" id="1_vlqj1"]
[ext_resource type="Script" path="res://beekeepers/beekeeper.gd" id="2_2u8re"]
[ext_resource type="PackedScene" uid="uid://b2b32q4ahegjt" path="res://interact_button.tscn" id="3_8ytqy"]
[ext_resource type="PackedScene" uid="uid://b03kqrvl5vekl" path="res://traits/trait_handler.tscn" id="4_n88sh"]
[ext_resource type="Script" path="res://traits/trait_slot.gd" id="5_1hawh"]
[ext_resource type="PackedScene" uid="uid://b67dhrr628m5u" path="res://components/adjacent_raycasts.tscn" id="6_2ah72"]
[ext_resource type="Script" path="res://traits/trait.gd" id="6_2enn5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_iqbjw"]
atlas = ExtResource("1_vlqj1")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0o8f"]
atlas = ExtResource("1_vlqj1")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yt2tx"]
atlas = ExtResource("1_vlqj1")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlhrt"]
atlas = ExtResource("1_vlqj1")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_at018"]
atlas = ExtResource("1_vlqj1")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_456lq"]
atlas = ExtResource("1_vlqj1")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_svo7y"]
atlas = ExtResource("1_vlqj1")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2xxa"]
atlas = ExtResource("1_vlqj1")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjtpu"]
atlas = ExtResource("1_vlqj1")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjgra"]
atlas = ExtResource("1_vlqj1")
region = Rect2(32, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_sstp7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqbjw")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_g0o8f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yt2tx")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_qlhrt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_at018")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_456lq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svo7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_456lq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svo7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_456lq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svo7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_456lq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svo7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_456lq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svo7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_456lq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svo7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_456lq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svo7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_456lq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svo7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_456lq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svo7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_456lq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svo7y")
}],
"loop": false,
"name": &"interact",
"speed": 8.0
}, {
"frames": [{
"duration": 1.5,
"texture": SubResource("AtlasTexture_n2xxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjtpu")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_wjgra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjtpu")
}],
"loop": true,
"name": &"move",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_20i3q"]
atlas = ExtResource("1_vlqj1")
region = Rect2(0, 0, 16, 16)

[sub_resource type="Resource" id="Resource_nwowq"]
script = ExtResource("6_2enn5")
trait_name = "smol"

[sub_resource type="Resource" id="Resource_vq1p6"]
script = ExtResource("5_1hawh")
trait_resource = SubResource("Resource_nwowq")
quantity = 5

[sub_resource type="Resource" id="Resource_heotd"]
script = ExtResource("6_2enn5")
trait_name = "block"

[sub_resource type="Resource" id="Resource_h31jq"]
script = ExtResource("5_1hawh")
trait_resource = SubResource("Resource_heotd")
quantity = 2

[sub_resource type="Resource" id="Resource_vox1j"]
script = ExtResource("6_2enn5")
trait_name = "beekeeper"

[sub_resource type="Resource" id="Resource_wopn8"]
script = ExtResource("5_1hawh")
trait_resource = SubResource("Resource_vox1j")
quantity = 10

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uq6kw"]
size = Vector2(8, 8)

[node name="Beekeeper" type="AnimatedSprite2D" node_paths=PackedStringArray("trait_handler", "interact_button", "adjacent_raycasts") groups=["beekeepers"]]
sprite_frames = SubResource("SpriteFrames_sstp7")
autoplay = "idle"
script = ExtResource("2_2u8re")
object_id = "_beekeeper"
object_icon = SubResource("AtlasTexture_20i3q")
trait_handler = NodePath("TraitHandler")
interact_button = NodePath("InteractButton")
adjacent_raycasts = NodePath("AdjacentRaycasts")

[node name="InteractButton" parent="." node_paths=PackedStringArray("trait_handler") instance=ExtResource("3_8ytqy")]
offset_left = -8.0
offset_top = -8.0
trait_handler = NodePath("../TraitHandler")

[node name="TraitHandler" parent="." node_paths=PackedStringArray("adjacent_raycasts") instance=ExtResource("4_n88sh")]
adjacent_raycasts = NodePath("../AdjacentRaycasts")
base_traits = Array[ExtResource("5_1hawh")]([SubResource("Resource_vq1p6"), SubResource("Resource_h31jq"), SubResource("Resource_wopn8")])

[node name="AdjacentRaycasts" parent="." instance=ExtResource("6_2ah72")]
unique_name_in_owner = true
mask = 12

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_uq6kw")

[node name="AutoInteractTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0
